feature(server): added remove VolunteerRequest endpoint